crates/php-parser/tests/snapshots/malformed_php__repeated_union_types.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected variable, found ')'
