crates/php-parser/tests/snapshots/malformed_php__trait_error_then_valid_class.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected method name, found '}'
expected '(', found '}'
expected variable, found '}'
expected ')', found '}'
expected ';', found '}'
