crates/php-parser/tests/snapshots/malformed_php__trait_invalid_adaptation_syntax.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected '::' or 'as', found identifier
expected identifier, found ';'
expected '::' or 'as', found ';'
