crates/php-parser/tests/snapshots/malformed_php__trait_missing_method_name.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected '::' or 'as', found ';'
