crates/php-parser/tests/snapshots/malformed_php__try_missing_catch_then_valid_echo.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected catch or finally clause, found 'echo'
