crates/php-parser/tests/snapshots/malformed_php__try_without_catch_or_finally.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected catch or finally clause, found end of file
