crates/php-parser/tests/snapshots/malformed_php__unclosed_double_quote.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected ';' after expression
expected ';' after expression
