crates/php-parser/tests/snapshots/malformed_php__unclosed_heredoc.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected expression
expected expression
expected ';' after expression
expected ';' after expression
