crates/php-parser/tests/snapshots/malformed_php__use_missing_name.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected identifier, found ';'
